Modificación de modelo de usuarios, rutas y servicios
