# src/routes/event.routes.js
@@ -5,9 +5,9 @@ import { verifyToken, soloOrganizador } from "../middlewares/auth.middleware.js"
 const router = Router();
 
 // GET /api/v1/events — pública, cualquiera puede ver los eventos
-router.get("/", getAllEvents);
+router.get("/getEvent", getAllEvents);
 
 // POST /api/v1/events — protegida: solo organizadores logueados pueden crear eventos
-router.post("/", verifyToken, soloOrganizador, createEvent);
+router.post("/createEvent", verifyToken, soloOrganizador, createEvent);
 
 export default router;
